Revision history for Perl module CPAN::Reporter::Smoker

{{$NEXT}}

0.26      2014-03-14 15:52:43+01:00 Europe/Paris

    [ADDED]

    - New option 'skip_dev_versions' to work on minicpans (CHORNY)

0.25      2013-11-06 10:06:15 America/New_York

    - Add reloading history of modules smoked (CHORNY)

    - Add support for custom filtering (CHORNY)

0.24      2011-07-21 00:12:34 America/New_York

    - Fixes test failures with CPAN::Reporter 1.19_04

0.23      2011-06-01 17:54:27 America/New_York

    - Fix cache cleanup with newer CPAN.pm (STSC)

0.22      2010-12-07 16:05:46 EST5EDT

    - Force localization of index files (don't allow cached copies)

    - Convert distribution to Dist::Zilla management

0.21 - Wed Sep 29 07:45:04 EDT 2010

    Fixed:

    - Skips t/smoke-disabled.t unless YAML is installed

0.20 Mon Sep 27 21:02:21 EDT 2010

    Added:

    - Checks distoprefs for skipping before firing up a CPAN test process
      [Christian Walde]

    - New 'reverse' option to reverse distribution test order
      [Serguei Trouchelle]

    - New 'force_trust' option to switch on CPAN's trust_test_report_history
      (instead of relying on the existing CPAN configuration)

    Fixed:

    - Temporary directories are labeled "C-R-Smoker-XXXXXX" to help
      identify them

0.19 Fri Jun  5 07:08:10 EDT 2009

    - Added: 'install' argument to install modules rather than just test
      them (without installing).  This helps avoid growing PERL5LIB at
      the cost of disk space of installed modules.  (Patch from 
      Serguei Trouchelle)

0.18 -- NEVER RELEASED

    - Changed: bumped CPAN, CPAN::Reporter, Module::Build and 
      ExtUtils::MakeMaker prereqs to latest versions

    - Fixed: don't treat .ppm.zip files in CPAN mirror as distributions

0.17 Sat Sep 20 10:11:00 EDT 2008

    - Added: 'list' argument may also be a filename
    
0.16 Sat Sep 20 08:54:49 EDT 2008

    - Added: 'list' argument to specify a particular list of distributions